# lopataTTC

./: .gitignore  LICENSE  README.md  README.ru.md  package.json
.github/workflows/: ci.yml  release.yml
scripts/: fetch-client.ps1  fetch-client.sh  regenerate-icons.ps1  regenerate-icons.sh
src/: i18n.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_updater.rs  commands.rs  deeplink.rs  elevate.rs  lib.rs  logging.rs  main.rs  profiles.rs  service.rs  settings.rs  uninstall.rs  updater.rs  vpn.rs
src/assets/locales/: en.json  ru.json
